<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>kdl_wrapper</name>
  <version>1.0.0</version>
  <description>Class wrapping kinematics from orocos KDL</description>
  <maintainer email="mariunil@stud.ntnu.no">Marius Nilsen</maintainer>
  <license>Apache License 2.0</license>
  <author email="mariunil@stud.ntnu.no">Marius Nilsen</author>
  <author email="markubjo@stud.ntnu.no">Markus Bjønnes</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>kdl_parser</depend>
  <depend>urdf</depend>
  <depend>orocos_kdl</depend>
  <depend>angles</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>